--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^10.0.3",
+    "axios": "^0.19.0",
+    "jetifier": "^1.6.3",
     "native-base": "^2.12.2",
     "react": "16.8.3",
     "react-native": "0.59.0",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-image-picker": "^1.0.1",
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.11.1"
   },
   "devDependencies": {
